syntax = "proto3";

package ibcswap.v4.interchainswap;

option go_package = "github.com/sideprotocol/ibcswap/v4/x/interchainswap/types";

message Coin {
    uint32 amount = 1;
    string denom = 2;
}

enum PoolSide {
    NATIVE = 0;
    REMOTE = 1;
}

enum PoolStatus {
    POOL_STATUS_INITIAL = 0;
    POOL_STATUS_READY = 1;
}
message PoolAsset {
    PoolSide side = 1;
    Coin balance = 2;
    uint32 weight = 3;
    uint32 decimal = 4;
}

message InterchainLiquidityPool {
    string poolId = 1; 
    repeated PoolAsset assets = 2;
    Coin supply = 3;
    PoolStatus status = 4;
    string encounterPartyPort = 5; 
    string encounterPartyChannel = 6; 
}